--- a/app/i18n/locales/tr.json
+++ b/app/i18n/locales/tr.json
@@ -674,6 +674,31 @@
     "products": {
       "title": "Ürünler",
       "description": "Sistemdeki tüm ürünleri yönetin ve inceleyin",
+      "loading": "Ürünler yükleniyor...",
+      "searchPlaceholder": "Ürün ara...",
+      "filterByManufacturer": "Üreticiye göre filtrele",
+      "filterByStatus": "Duruma göre filtrele",
+      "allManufacturers": "Tüm Üreticiler",
+      "allStatus": "Tüm Durumlar",
+      "allApproved": "Tümü Onaylandı",
+      "pendingReview": "İnceleme Bekliyor",
+      "hasRejectedDocuments": "Reddedilmiş Dökümanlar Var",
+      "noDocuments": "Döküman Yok",
+      "noProductsFound": "Ürün Bulunamadı",
+      "noProductsAdded": "Henüz ürün eklenmemiş.",
+      "noProductsMatchFilter": "Filtrelere uygun ürün bulunamadı.",
+      "manufacturer": "Üretici",
+      "category": "Kategori",
+      "documents": "Dökümanlar",
+      "status": "Durum",
+      "uncategorized": "Kategorisiz",
+      "viewDetails": "Detayları Görüntüle",
+      "viewDocuments": "Dökümanları Görüntüle",
+      "addNewProduct": "Yeni Ürün Ekle",
+      "created": "Oluşturulma Tarihi",
+      "documentCount": "{count} döküman",
+      "documentCount_plural": "{count} döküman",
+      "unknownManufacturer": "Bilinmeyen Üretici",
       "details": {
         "backButton": "Ürünlere Dön",
         "viewDocuments": "Dökümanları Görüntüle",
