Refactor: Removed unnecessary layout and loading components, and integrated existing company hook
- app/admin/companies/[id]/layout.tsx ve layout.tsx dosyaları kaldırıldı
- app/admin/companies/[id]/loading.tsx ve root loading.tsx kaldırıldı
- company-details.tsx içindeki fetchCompanyDetails kaldırıldı, lib altında mevcut company hook'u kullanıldı

--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -438,6 +438,14 @@
         "viewAnalytics": "View Analytics"
       }
     },
+    "menu": {
+      "dashboard": "Dashboard",
+      "products": "Products",
+      "certifications": "Certifications",
+      "documents": "Documents",
+      "analytics": "Analytics",
+      "settings": "Settings"
+    },
     "products": {
       "title": "Product Management",
       "description": "Manage your battery products and DPPs",
@@ -781,6 +789,26 @@
           "maintenance": "Scheduled Maintenance",
           "highVolume": "High Volume"
         }
+      }
+    },
+    "systemAlerts": {
+      "title": "System Alerts",
+      "noAlerts": "No active alerts",
+      "severity": {
+        "high": "High",
+        "medium": "Medium",
+        "low": "Low"
+      }
+    },
+    "recentApprovals": {
+      "title": "Recent Approvals",
+      "noApprovals": "No approvals yet",
+      "viewAll": "View All",
+      "types": {
+        "manufacturer": "Manufacturer",
+        "product": "Product",
+        "document": "Document",
+        "certification": "Certification"
       }
     },
     "labels": {
