--- a/app/i18n/locales/en.json
+++ b/app/i18n/locales/en.json
@@ -622,6 +622,44 @@
       "draft": "Draft",
       "active": "Active",
       "pending": "Pending"
+    },
+    "loading": "Loading...",
+    "buttons": {
+      "back": "Back",
+      "login": "Login",
+      "dashboard": "Go to Dashboard"
+    },
+    "auth": {
+      "required": "Authentication Required",
+      "loginRequired": "You need to login to view this page.",
+      "companyRequired": "Please make sure you are associated with a company."
+    },
+    "labels": {
+      "notAvailable": "Not Available"
+    },
+    "error": {
+      "title": "Error",
+      "description": "An error occurred",
+      "tryAgain": "Please try again",
+      "notFound": "Not Found",
+      "unauthorized": "Unauthorized Access",
+      "forbidden": "Access Denied",
+      "serverError": "Server Error"
+    },
+    "success": {
+      "title": "Success",
+      "saved": "Saved",
+      "updated": "Updated",
+      "deleted": "Deleted",
+      "created": "Created"
+    },
+    "validation": {
+      "required": "This field is required",
+      "email": "Please enter a valid email address",
+      "minLength": "Must be at least {length} characters",
+      "maxLength": "Must be at most {length} characters",
+      "password": "Password must be at least 8 characters",
+      "passwordMatch": "Passwords do not match"
     }
   },
   "productCategories": {
@@ -910,6 +948,10 @@
         },
         "errorLoadingProduct": "Error Loading Product",
         "unexpectedError": "An unexpected error occurred"
+      },
+      "errors": {
+        "notFound": "Product Not Found",
+        "notFoundDescription": "The requested product could not be found. It may have been deleted or you may not have permission to view it."
       }
     },
     "dpc": {
